--- a/parallel_texts/pk-sentence-mapping.json
+++ b/parallel_texts/pk-sentence-mapping.json
@@ -5,22 +5,22 @@
     "mapping": [
       {
         "label": "pk-hfad-1_اللہ-ہم(we)-پر-رحم-amen",
-        "transcription": {
+        "gloss": {
           "en": ["god us on mercy amen", "allah us on mercy amen"],
           "latn-ur": ["Allah hm pr rehm amen"],
           "ur": ["اللہ ہم پر رحم آمین", "اللہ تعالی ہم پر رحم آمین", "خدا ہم پر رحمت آمین"]
         },
         "translation": {
           "en": ["God have mercy on us, amen.", "Allah have mercy on us, amen."],
-          "hi": ["भगवान हम पर दया करें आमीन!", "ईश्वर हम पर दया करें, आमीन."],
+          "hi": ["भगवान हम पर दया करें आमीन!", "ईश्वर हम पर दया करें, आमीन।"],
           "latn-ur": ["Allah ham par reham farma, Aameen."],
-          "ur": ["اللہ ہم پر رحم کر، آمین۔", "اللہ تعالی ہم پر رحمت فرما، آمین!", "خدا ہم پر رحم فرما، آمین۔"]
+          "ur": ["اللہ ہم پر رحم کر، آمین۔", "اللہ تعالی ہم پر رحمت فرما، آمین!", "خدا ہم پر رحم فرما، آمین."]
         }
       },
       {
         "components": ["pk-hfad-1_آپ", "pk-hfad-1_کا", "pk-hfad-1_نام", "pk-hfad-1_کیا(what)", "pk-hfad-1_ہے"],
         "label": "pk-hfad-1_آپ-کا-نام-کیا(what)-ہے",
-        "transcription": {
+        "gloss": {
           "en": ["your name what is"],
           "latn-ur": ["aap ka nam kya hai"],
           "ur": ["آپ کا نام کیا ہے"]
@@ -35,14 +35,14 @@
       {
         "components": ["pk-hfad-1_اپنا(ذاتی)", "pk-hfad-1_کام", "pk-hfad-1_کرو"],
         "label": "pk-hfad-1_اپنا(ذاتی)-کام-کرو",
-        "transcription": {
+        "gloss": {
           "en": ["own work do"],
           "latn-ur": ["apna kam kro"],
           "ur": ["اپنا کام کرو"]
         },
         "translation": {
           "en": ["Do your work.", "Do your own work."],
-          "hi": ["अपना काम करो।."],
+          "hi": ["अपना काम करो।"],
           "latn-ur": ["Apna kam kro."],
           "ur": ["اپنا کام کرو۔"]
         }
@@ -50,14 +50,14 @@
       {
         "components": ["pk-hfad-1_تم", "pk-hfad-1_آؤ"],
         "label": "pk-hfad-1_تم-آؤ",
-        "transcription": {
+        "gloss": {
           "en": ["you come"],
           "latn-ur": ["tum aao"],
           "ur": ["تم آؤ"]
         },
         "translation": {
           "en": ["You come."],
-          "hi": ["तुम आओ।."],
+          "hi": ["तुम आओ।"],
           "latn-ur": ["Tum aao."],
           "ur": ["تم آؤ۔"]
         }
@@ -65,7 +65,7 @@
       {
         "components": ["pk-hfad-1_میں(i)", "pk-hfad-1_آؤں"],
         "label": "pk-hfad-1_میں(i)-آؤں",
-        "transcription": {
+        "gloss": {
           "en": ["i come"],
           "latn-ur": ["main aaun"],
           "ur": ["میں آؤں"]
@@ -79,14 +79,14 @@
       {
         "components": ["pk-hfad-1_وہ", "pk-hfad-1_آئی(came)"],
         "label": "pk-hfad-1_وہ-آئی(came)",
-        "transcription": {
+        "gloss": {
           "en": ["she came"],
           "latn-ur": ["wo aai"],
           "ur": ["وہ آئی"]
         },
         "translation": {
           "en": ["She came."],
-          "hi": ["वह आई.", "वह आयी."],
+          "hi": ["वह आई।", "वह आयी."],
           "latn-ur": ["Wo aai."],
           "ur": ["وہ آئی۔"]
         }
@@ -94,14 +94,14 @@
       {
         "components": ["pk-hfad-1_وہ", "pk-hfad-1_آئے"],
         "label": "pk-hfad-1_وہ-آئے",
-        "transcription": {
+        "gloss": {
           "en": ["they came"],
           "latn-ur": ["wo aaey"],
           "ur": ["وہ آئے"]
         },
         "translation": {
           "en": ["They came."],
-          "hi": ["वे आए।."],
+          "hi": ["वे आए।"],
           "latn-ur": ["Wo aaey."],
           "ur": ["وہ آئے۔"]
         }
@@ -109,14 +109,14 @@
       {
         "components": ["pk-hfad-1_وہ", "pk-hfad-1_آیا(came)"],
         "label": "pk-hfad-1_وہ-آیا(came)",
-        "transcription": {
+        "gloss": {
           "en": ["he came", "he arrived"],
           "latn-ur": ["wo aaya"],
           "ur": ["وہ آیا"]
         },
         "translation": {
           "en": ["He came.", "He arrived."],
-          "hi": ["वो आया।.", "वह आया।."],
+          "hi": ["वो आया.", "वह आया।"],
           "latn-ur": ["Wo aaya."],
           "ur": ["وہ آیا۔"]
         }
@@ -124,13 +124,13 @@
       {
         "components": ["pk-hfad-1_وہ", "pk-hfad-1_گیا", "pk-hfad-1_تھا"],
         "label": "pk-hfad-1_وہ-گیا-تھا",
-        "transcription": {
+        "gloss": {
           "latn-ur": ["wo gya tha"],
           "ur": ["وہ گیا تھا"]
         },
         "translation": {
           "en": ["He went."],
-          "hi": ["वह गया था."],
+          "hi": ["वह गया था।"],
           "latn-ur": ["Wo gya tha."],
           "ur": ["وہ گیا تھا۔"]
         }
@@ -138,7 +138,7 @@
       {
         "components": ["pk-hfad-1_ہم(we)", "pk-hfad-1_آئیں"],
         "label": "pk-hfad-1_ہم(we)-آئیں",
-        "transcription": {
+        "gloss": {
           "en": ["we come"],
           "latn-ur": ["hm aaein"],
           "ur": ["ہم آئیں"]
@@ -152,42 +152,42 @@
       {
         "components": ["pk-hfad-1_ہم(we)", "pk-hfad-1_جائیں", "pk-hfad-1_گے"],
         "label": "pk-hfad-1_ہم(we)-جائیں-گے",
-        "transcription": {
+        "gloss": {
           "en": ["we go will"],
           "latn-ur": ["hm jaein ge"],
           "ur": ["ہم جائیں گے"]
         },
         "translation": {
           "en": ["We will go.", "We'll go."],
-          "hi": ["हम जाएंगे."],
+          "hi": ["हम जाएंगे।"],
           "latn-ur": ["Hum jaein gy."],
           "ur": ["ہم جائیں گے۔"]
         }
       },
       {
         "label": "pk-hfad-1_ہماری-زبان-کی-گرہ-کھول",
-        "transcription": {
+        "gloss": {
           "en": ["our tongue 's knot untie"],
           "latn-ur": ["hmari zuban ki girah khol"],
           "ur": ["ہماری زبان کی گرہ کھول"]
         },
         "translation": {
           "en": ["Open the knot of our tongue.", "Untie our tongue.", "Open our tongue's knot."],
-          "hi": ["हमारी जीभ की गाँठ खोलें."],
+          "hi": ["हमारी जीभ की गाँठ खोलें।"],
           "latn-ur": ["Humari zuban ki girah kholein."],
           "ur": ["ہماری زبان کی گرہ کھولو۔"]
         }
       },
       {
         "label": "pk-hfad-1_ہمارے-علم-میں(in)-اضافہ-amen",
-        "transcription": {
+        "gloss": {
           "en": ["our knowledge in increase amen"],
           "latn-ur": ["hmary ilm mein izafa aameen"],
           "ur": ["ہمارے علم میں اضافہ آمین"]
         },
         "translation": {
           "en": ["Increase our knowledge, Amen."],
-          "hi": ["हमारा ज्ञान बढ़ाएँ, तथास्तु."],
+          "hi": ["हमारा ज्ञान बढ़ाएँ, तथास्तु।"],
           "latn-ur": ["Hamary ilm me izafa kr, aameen."],
           "ur": ["ہمارے علم میں اضافہ فرما، آمین۔", "ہمارا علم بڑھاو، آمین۔"]
         }
