common hindi words for 45 PK-SL signs

--- a/parallel_texts/pk-dictionary-mapping.json
+++ b/parallel_texts/pk-dictionary-mapping.json
@@ -769,7 +769,7 @@
         "label": "pk-hfad-1_gold",
         "token": {
           "en": ["gold", "golden"],
-          "hi": ["सोना(स्वर्ण)", "सोने(स्वर्ण)","स्वर्ण"],
+          "hi": ["सोना(स्वर्ण)", "सोने(स्वर्ण)", "स्वर्ण"],
           "ur": ["سونا(دھات)", "سونے(دھات)", "گولڈ", "سنہرا", "سنہری", "سنہرے"]
         }
       },
@@ -861,6 +861,7 @@
         "label": "pk-hfad-1_india",
         "token": {
           "en": ["india", "indian", "hindustan"],
+          "hi": ["भारत", "इंडिया", "हिन्दुस्तान", "हिंदुस्तान"],
           "ur": ["انڈیا", "بھارت", "ہندوستان", "ہندوستاں", "انڈین", "بھارتی", "ہندوستانی"]
         }
       },
@@ -984,6 +985,7 @@
         "label": "pk-hfad-1_k(double-handed-letter)",
         "token": {
           "en": ["k(double-handed-letter)", "karachi"],
+          "hi": ["कराची"],
           "ur": ["k(double-handed-letter)", "کے(k-double-handed-letter)", "کراچی"]
         }
       },
@@ -1184,6 +1186,7 @@
         "label": "pk-hfad-1_p(double-handed-letter)",
         "token": {
           "en": ["p(double-handed-letter)", "pakistan", "pakistani"],
+          "hi": ["पाकिस्तान", "पाकिस्तानी"],
           "ur": ["p(double-handed-letter)", "پی(p-double-handed-letter)", "پاکستان", "پاکستانی"]
         }
       },
@@ -1523,6 +1526,7 @@
         "label": "pk-hfad-1_today",
         "token": {
           "en": ["today"],
+          "hi": ["आज"],
           "ur": ["آج"]
         }
       },
@@ -1964,6 +1968,7 @@
         "label": "pk-hfad-1_اور",
         "token": {
           "en": ["and"],
+          "hi": ["और"],
           "ur": ["اور", "و(اور)"]
         }
       },
@@ -2020,6 +2025,7 @@
         "label": "pk-hfad-1_آپ",
         "token": {
           "en": ["you(formal-آپ)"],
+          "hi": ["आप"],
           "ur": ["آپ"]
         }
       },
@@ -2083,6 +2089,7 @@
         "label": "pk-hfad-1_بات",
         "token": {
           "en": ["conversation", "talk", "chat", "gossip"],
+          "hi": ["बातचीत", "बातें", "बात", "गपशप"],
           "ur": ["بات", "بات چیت", "باتیں", "گفتگو", "گپ شپ", "بول چال", "کلام", "کلامی"]
         }
       },
@@ -2362,6 +2369,7 @@
         "label": "pk-hfad-1_بہت",
         "token": {
           "en": ["very", "many", "a lot"],
+          "hi": ["बहुत"],
           "ur": ["بہت", "نہایت", "انتہائی", "شدید"]
         }
       },
@@ -2512,6 +2520,7 @@
         "label": "pk-hfad-1_تم",
         "token": {
           "en": ["you(تم)"],
+          "hi": ["तुम"],
           "ur": ["تم", "تجھ", "تُم", "تو(تم)", "تُو"]
         }
       },
@@ -2575,6 +2584,7 @@
         "label": "pk-hfad-1_تھا",
         "token": {
           "en": ["was(masculine-تھا)"],
+          "hi": ["था"],
           "ur": ["تھا"]
         }
       },
@@ -2582,6 +2592,7 @@
         "label": "pk-hfad-1_تھی",
         "token": {
           "en": ["was(feminine-تھی)"],
+          "hi": ["थी"],
           "ur": ["تھی"]
         }
       },
@@ -2589,6 +2600,7 @@
         "label": "pk-hfad-1_تھے",
         "token": {
           "en": ["were(تھے)"],
+          "hi": ["थे"],
           "ur": ["تھے"]
         }
       },
@@ -3073,6 +3085,7 @@
         "label": "pk-hfad-1_دن",
         "token": {
           "en": ["day"],
+          "hi": ["दिन"],
           "ur": ["دن", "دِن", "روز", "یوم", "یومِ"]
         }
       },
@@ -3080,6 +3093,7 @@
         "label": "pk-hfad-1_دنیا",
         "token": {
           "en": ["world", "earth"],
+          "hi": ["दुनिया"],
           "ur": ["دنیا", "دُنیا", "جہان", "عالمی", "کرہ ارض"]
         }
       },
@@ -3280,6 +3294,7 @@
         "label": "pk-hfad-1_رات",
         "token": {
           "en": ["night"],
+          "hi": ["रात"],
           "ur": ["رات", "شب"]
         }
       },
@@ -3351,7 +3366,7 @@
         "label": "pk-hfad-1_رکشہ",
         "token": {
           "en": ["rickshaw", "chingchi"],
-          "ur": ["رکشہ", "رکشا", "رکشے", "چنگ چی"]
+          "ur": ["رکشہ", "رکشا", "رکشے", "چنگ چی", "چنگچی"]
         }
       },
       {
@@ -3407,6 +3422,7 @@
         "label": "pk-hfad-1_ساتھ",
         "token": {
           "en": ["with", "together", "along"],
+          "hi": ["साथ"],
           "ur": ["ساتھ", "اکٹھا", "اِکٹھا", "اکٹھے", "اِکٹھے", "اکٹھی", "اِکٹھی"]
         }
       },
@@ -3443,6 +3459,7 @@
         "label": "pk-hfad-1_سب",
         "token": {
           "en": ["all", "every", "entire"],
+          "hi": ["सब", "सभी"],
           "ur": ["سب", "تمام", "ہر", "سارا(تمام)", "سارے", "ساری"]
         }
       },
@@ -3606,6 +3623,7 @@
         "label": "pk-hfad-1_سے",
         "token": {
           "en": ["from"],
+          "hi": ["से"],
           "ur": ["سے"]
         }
       },
@@ -3719,6 +3737,7 @@
         "label": "pk-hfad-1_شہر",
         "token": {
           "en": ["city"],
+          "hi": ["शहर"],
           "ur": ["شہر"]
         }
       },
@@ -4133,6 +4152,7 @@
         "label": "pk-hfad-1_لوگ",
         "token": {
           "en": ["people"],
+          "hi": ["जनता", "लोग"],
           "ur": ["لوگ", "لوگوں", "افراد", "عوام", "عوامی", "شہریوں"]
         }
       },
@@ -4435,6 +4455,7 @@
         "label": "pk-hfad-1_ملک(country)",
         "token": {
           "en": ["country(homeland)"],
+          "hi": ["देश"],
           "ur": ["ملک(وطن)", "مُلک", "وطن"]
         }
       },
@@ -4519,6 +4540,7 @@
         "label": "pk-hfad-1_میرا",
         "token": {
           "en": ["mine(masculine-میرا)", "my(masculine-میرا)"],
+          "hi": ["मेरा"],
           "ur": ["میرا"]
         }
       },
@@ -4526,6 +4548,7 @@
         "label": "pk-hfad-1_میری",
         "token": {
           "en": ["mine(feminine-میری)", "my(feminine-میری)"],
+          "hi": ["मेरी"],
           "ur": ["میری"]
         }
       },
@@ -4533,6 +4556,7 @@
         "label": "pk-hfad-1_میرے",
         "token": {
           "en": ["mine(میرے)", "my(میرے)"],
+          "hi": ["मेरे"],
           "ur": ["میرے"]
         }
       },
@@ -4561,6 +4585,7 @@
         "label": "pk-hfad-1_میں(i)",
         "token": {
           "en": ["i(me)"],
+          "hi": ["मैं"],
           "ur": ["میں(متکلم)"]
         }
       },
@@ -4568,6 +4593,7 @@
         "label": "pk-hfad-1_میں(in)",
         "token": {
           "en": ["in", "inside"],
+          "hi": ["में", "अंदर"],
           "ur": ["میں(اندر)", "اندر"]
         }
       },
@@ -4596,6 +4622,7 @@
         "label": "pk-hfad-1_نام",
         "token": {
           "en": ["name", "named"],
+          "hi": ["नाम"],
           "ur": ["نام"]
         }
       },
@@ -4723,6 +4750,7 @@
         "label": "pk-hfad-1_نہیں",
         "token": {
           "en": ["no", "not", "green", "greenish", "leaf"],
+          "hi": ["नहीं", "नही"],
           "ur": ["نہیں", "نہ", "پتا(پودا)", "پتے(پودا)", "پتی(پودا)", "سبز", "ہرا(سبز)", "ہری", "ہرے"]
         }
       },
@@ -4744,6 +4772,7 @@
         "label": "pk-hfad-1_نے",
         "token": {
           "en": ["by(active-voice-نے)"],
+          "hi": ["ने"],
           "ur": ["نے"]
         }
       },
@@ -4784,6 +4813,7 @@
         "label": "pk-hfad-1_وقت",
         "token": {
           "en": ["time"],
+          "hi": ["समय", "वक्त"],
           "ur": ["وقت"]
         }
       },
@@ -4798,6 +4828,7 @@
         "label": "pk-hfad-1_وہ",
         "token": {
           "en": ["that", "he", "she", "they"],
+          "hi": ["वह", "वे"],
           "ur": ["وہ", "وہی", "اُس", "اُسے", "اُسی", "اس(اُس)", "اسی(اُسی)", "اسے(اُسے)", "اُن", "ان(اُن)"]
         }
       },
@@ -5239,6 +5270,7 @@
         "label": "pk-hfad-1_کا",
         "token": {
           "en": ["of(masculine-کا)"],
+          "hi": ["का"],
           "ur": ["کا"]
         }
       },
@@ -5260,6 +5292,7 @@
         "label": "pk-hfad-1_کام",
         "token": {
           "en": ["work", "task"],
+          "hi": ["काम"],
           "ur": ["کام"]
         }
       },
@@ -5425,6 +5458,7 @@
         "label": "pk-hfad-1_کو",
         "token": {
           "en": ["to"],
+          "hi": ["को"],
           "ur": ["کو"]
         }
       },
@@ -5496,6 +5530,7 @@
         "label": "pk-hfad-1_کیا(what)",
         "token": {
           "en": ["what"],
+          "hi": ["क्या"],
           "ur": ["کیا(سوال)"]
         }
       },
@@ -5503,6 +5538,7 @@
         "label": "pk-hfad-1_کیسا",
         "token": {
           "en": ["how(masculine-کیسا)"],
+          "hi": ["कैसा"],
           "ur": ["کیسا"]
         }
       },
@@ -5510,6 +5546,7 @@
         "label": "pk-hfad-1_کیسی",
         "token": {
           "en": ["how(feminine-کیسی)"],
+          "hi": ["कैसी"],
           "ur": ["کیسی"]
         }
       },
@@ -5517,6 +5554,7 @@
         "label": "pk-hfad-1_کیسے",
         "token": {
           "en": ["how(کیسے)"],
+          "hi": ["कैसे"],
           "ur": ["کیسے"]
         }
       },
@@ -5630,6 +5668,7 @@
         "label": "pk-hfad-1_گئی",
         "token": {
           "en": ["went(feminine-گئی)", "gone(feminine-گئی)"],
+          "hi": ["गई"],
           "ur": ["گئی"]
         }
       },
@@ -5637,6 +5676,7 @@
         "label": "pk-hfad-1_گئے",
         "token": {
           "en": ["went(گئے)", "gone(گئے)"],
+          "hi": ["गए"],
           "ur": ["گئے"]
         }
       },
@@ -5673,6 +5713,7 @@
         "label": "pk-hfad-1_گیا",
         "token": {
           "en": ["went(masculine-گیا)", "gone(masculine-گیا)"],
+          "hi": ["गया"],
           "ur": ["گیا"]
         }
       },
@@ -5722,7 +5763,8 @@
         "label": "pk-hfad-1_ہم(we)",
         "token": {
           "en": ["we"],
-          "ur": ["ہم(متکلم)"]
+          "hi": ["हम"],
+          "ur": ["ہم"]
         }
       },
       {
@@ -5786,6 +5828,7 @@
         "label": "pk-hfad-1_ہیں",
         "token": {
           "en": ["are"],
+          "hi": ["हैं"],
           "ur": ["ہیں"]
         }
       },
@@ -5793,6 +5836,7 @@
         "label": "pk-hfad-1_ہے",
         "token": {
           "en": ["is"],
+          "hi": ["है"],
           "ur": ["ہے"]
         }
       },
@@ -5807,6 +5851,7 @@
         "label": "pk-hfad-1_یہ",
         "token": {
           "en": ["it", "this"],
+          "hi": ["यह"],
           "ur": [
             "یہ",
             "یہی",
