Update FUNDING.yml with paypal

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,1 @@
-github: [sign-language-translator, mdsrqbl]
-patreon: MudassarIqbal
-open_collective: sign-language-translator
+custom: [https://www.paypal.com/donate/?hosted_button_id=7SNGNSKUQXQW2]
