--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: [https://www.paypal.com/donate/?hosted_button_id=7SNGNSKUQXQW2]
+custom: ["https://www.paypal.com/donate/?hosted_button_id=7SNGNSKUQXQW2"]
