--- a/parallel_texts/pk-sentence-mapping.json
+++ b/parallel_texts/pk-sentence-mapping.json
@@ -26,7 +26,7 @@
           "ur": ["آپ کا نام کیا ہے"]
         },
         "translation": {
-          "en": ["What is your name?"],
+          "en": ["What is your name?", "What's your name?"],
           "hi": ["आपका क्या नाम है?"],
           "latn-ur": ["Aap ka naam kya hai?"],
           "ur": ["آپ کا نام کیا ہے؟", "آپ کا کیا نام ہے؟"]
