add more tokens from user logs

--- a/parallel_texts/pk-dictionary-mapping.json
+++ b/parallel_texts/pk-dictionary-mapping.json
@@ -144,7 +144,7 @@
         "label": "pk-hfad-1_aaey",
         "token": {
           "en": ["came(آئے)"],
-          "ur": ["آئے"]
+          "ur": ["آئے", "آئیے"]
         }
       },
       {
@@ -344,6 +344,7 @@
         "label": "pk-hfad-1_am",
         "token": {
           "en": ["am"],
+          "hi": ["हूं"],
           "ur": ["ہوں"]
         }
       },
@@ -778,6 +779,7 @@
         "label": "pk-hfad-1_brother",
         "token": {
           "en": ["brother"],
+          "hi": ["भाई", "भई"],
           "ur": ["بھائی", "برادر", "بھئی"]
         }
       },
@@ -1454,7 +1456,7 @@
             "watch(look-دیکھے)",
             "watched(دیکھے)"
           ],
-          "ur": ["دیکھے"]
+          "ur": ["دیکھے", "دیکھیے"]
         }
       },
       {
@@ -1524,6 +1526,7 @@
         "label": "pk-hfad-1_does(krta)",
         "token": {
           "en": ["does(masculine-کرتا)", "do(masculine-کرتا)"],
+          "hi": ["करता"],
           "ur": ["کرتا(فعل-مضارع)"]
         }
       },
@@ -1531,14 +1534,16 @@
         "label": "pk-hfad-1_does(krti)",
         "token": {
           "en": ["does(feminine-کرتی)", "do(feminine-کرتی)"],
+          "hi": ["करती"],
           "ur": ["کرتی(فعل-مضارع)"]
         }
       },
       {
         "label": "pk-hfad-1_dog",
         "token": {
-          "en": ["dog", "bitch"],
-          "ur": ["کتا", "کُتّا", "کتی", "کتے"]
+          "en": ["dog", "doggy", "bitch"],
+          "hi": ["कुत्ता", "कुतिया", "कुत्ते"],
+          "ur": ["کتا", "کُتّا", "کتی", "کتے", "کتیا"]
         }
       },
       {
@@ -1916,6 +1921,7 @@
         "label": "pk-hfad-1_find",
         "token": {
           "en": ["find", "found(find)", "finding(verb)"],
+          "hi": ["ढूंढ"],
           "ur": [
             "ڈھونڈ",
             "ڈھونڈا",
@@ -2034,6 +2040,7 @@
         "label": "pk-hfad-1_friend",
         "token": {
           "en": ["friend"],
+          "hi": ["दोस्त", "मित्र"],
           "ur": ["دوست", "دوستی", "سہیلی", "فرینڈ", "یار"]
         }
       },
@@ -2185,6 +2192,7 @@
         "label": "pk-hfad-1_give",
         "token": {
           "en": ["give", "given", "gave"],
+          "hi": ["दें", "देता", "देती", "दिया"],
           "ur": [
             "دو(دینا)",
             "دوں",
@@ -2236,6 +2244,7 @@
         "label": "pk-hfad-1_good",
         "token": {
           "en": ["good", "great", "👍"],
+          "hi": ["ठीक", "अच्छा", "अच्छी", "अच्छे", "बढ़िया"],
           "ur": ["اچھا", "اچھی", "اچھے", "ٹھیک", "شاندار", "کمال", "زبردست", "عمدہ", "👍"]
         }
       },
@@ -2611,7 +2620,8 @@
       {
         "label": "pk-hfad-1_hurry",
         "token": {
-          "en": ["hurry", "early", "haste"],
+          "en": ["hurry", "early", "haste", "soon"],
+          "hi": ["जल्दी", "जल्द"],
           "ur": ["جلدی", "فوری", "فورا", "فوراً"]
         }
       },
@@ -3082,6 +3092,7 @@
         "label": "pk-hfad-1_krein",
         "token": {
           "en": ["do(کریں)"],
+          "hi": ["करें"],
           "ur": ["کریں"]
         }
       },
@@ -3089,6 +3100,7 @@
         "label": "pk-hfad-1_kro",
         "token": {
           "en": ["do(کرو)"],
+          "hi": ["करो"],
           "ur": ["کرو"]
         }
       },
@@ -3096,6 +3108,7 @@
         "label": "pk-hfad-1_krty(do)",
         "token": {
           "en": ["do(کرتے)"],
+          "hi": ["करते"],
           "ur": ["کرتے(فعل-مضارع)"]
         }
       },
@@ -3103,6 +3116,7 @@
         "label": "pk-hfad-1_krun",
         "token": {
           "en": ["do(کروں)"],
+          "hi": ["करूं"],
           "ur": ["کروں"]
         }
       },
@@ -3110,7 +3124,8 @@
         "label": "pk-hfad-1_kry",
         "token": {
           "en": ["do(کرے)"],
-          "ur": ["کرے"]
+          "hi": ["करे", "करिए", "कीजिए"],
+          "ur": ["کرے", "کریے", "کیجیے"]
         }
       },
       {
@@ -3263,6 +3278,7 @@
             "construct",
             "constructed"
           ],
+          "hi": ["बनाएँ", "बनाएं", "बनाया"],
           "ur": [
             "بن(بَن)",
             "بَن",
@@ -3379,6 +3395,7 @@
         "label": "pk-hfad-1_me",
         "token": {
           "en": ["me"],
+          "hi": ["मुझे", "मुझ"],
           "ur": ["مجھے", "مجھ"]
         }
       },
@@ -3466,6 +3483,7 @@
         "label": "pk-hfad-1_minute(unit-of-time)",
         "token": {
           "en": ["minute(unit-of-time)", "minutes(unit-of-time)"],
+          "hi": ["मिनट"],
           "ur": ["منٹ(وقت)", "منٹوں"]
         }
       },
@@ -3857,6 +3875,7 @@
         "label": "pk-hfad-1_papa",
         "token": {
           "en": ["papa", "father", "dad", "daddy"],
+          "hi": ["पापा", "पिता", "पिताजी", "बाप"],
           "ur": ["باپ", "والد", "ابا", "ابو", "پاپا"]
         }
       },
@@ -3929,7 +3948,7 @@
         "token": {
           "en": ["people"],
           "hi": ["जनता", "लोग"],
-          "ur": ["لوگ", "لوگوں", "افراد", "عوام", "عوامی", "شہریوں"]
+          "ur": ["لوگ", "لوگوں", "افراد", "عوام", "عوامی", "شہریوں", "اشخاص"]
         }
       },
       {
@@ -4576,6 +4595,7 @@
         "label": "pk-hfad-1_search",
         "token": {
           "en": ["search", "searched", "searching", "investigate", "scout"],
+          "hi": ["खोज", "खोजा"],
           "ur": ["تلاش", "تلاشی", "کھوج", "چھان بین", "چھان بینی"]
         }
       },
@@ -4986,7 +5006,7 @@
       {
         "label": "pk-hfad-1_sun",
         "token": {
-          "en": ["sun", "solar"],
+          "en": ["sun", "solar", "sunny"],
           "ur": ["سورج", "شمسی"]
         }
       },
@@ -5286,6 +5306,7 @@
         "label": "pk-hfad-1_tree",
         "token": {
           "en": ["tree"],
+          "hi": ["पेड़", "वृक्ष"],
           "ur": ["درخت", "پیڑ", "شجر"]
         }
       },
@@ -5313,7 +5334,7 @@
       {
         "label": "pk-hfad-1_try",
         "token": {
-          "en": ["try", "effort", "endeavor"],
+          "en": ["try", "effort", "endeavor", "trying"],
           "ur": ["کوشش", "جدوجہد"]
         }
       },
@@ -5920,6 +5941,18 @@
         "token": {
           "en": ["to you(formal-آپ)"],
           "ur": ["آپکو"]
+        }
+      },
+      {
+        "components": ["pk-hfad-1_tm", "pk-hfad-1_from"],
+        "token": {
+          "hi": ["तुमसे"]
+        }
+      },
+      {
+        "components": ["pk-hfad-1_me", "pk-hfad-1_from"],
+        "token": {
+          "hi": ["मुझसे"]
         }
       },
       {
